--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <div class="snow"></div>
+<!--     <div class="snow"></div>
     <div class="box">
         <h2>فرم ثبت نام</h2>
         <form class="form" action="#">
@@ -66,7 +66,9 @@
         snowflake.style.animationTimingFunction = 'linear';
         snowflake.style.animationIterationCount = 'infinite';
     }
-    </script>
+    </script> -->
+
+    <script src="script.js"></script>
 </body>
 
 </html>
